Fix some code inspection warnings